--- a/USER_INTERFACE/MainWindowLogin.ui
+++ b/USER_INTERFACE/MainWindowLogin.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>Login</class>
+ <widget class="QMainWindow" name="Login">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1388</width>
-    <height>855</height>
+    <width>951</width>
+    <height>711</height>
    </rect>
   </property>
   <property name="focusPolicy">
@@ -20,8 +20,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>276</x>
-      <y>60</y>
+      <x>12</x>
+      <y>12</y>
       <width>445</width>
       <height>637</height>
      </rect>
@@ -33,7 +33,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>login_bg.png</pixmap>
+     <pixmap>../RESOURCE/IMAGE/login_bg.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -42,8 +42,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>264</x>
-      <y>48</y>
+      <x>0</x>
+      <y>0</y>
       <width>949</width>
       <height>661</height>
      </rect>
@@ -58,10 +58,10 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>744</x>
-      <y>168</y>
+      <x>480</x>
+      <y>72</y>
       <width>445</width>
-      <height>409</height>
+      <height>385</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -174,7 +174,6 @@ font: 57 12pt &quot;Montserrat Medium&quot;;</string>
          <weight>3</weight>
          <italic>false</italic>
          <bold>false</bold>
-         <kerning>true</kerning>
         </font>
        </property>
        <property name="toolTipDuration">
@@ -228,7 +227,6 @@ font: 57 12pt &quot;Montserrat Medium&quot;;</string>
            <weight>7</weight>
            <italic>false</italic>
            <bold>false</bold>
-           <kerning>false</kerning>
           </font>
          </property>
          <property name="focusPolicy">
@@ -255,8 +253,8 @@ color: rgb(255, 255, 255);
    <widget class="QWidget" name="verticalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>108</y>
+      <x>36</x>
+      <y>60</y>
       <width>385</width>
       <height>121</height>
      </rect>
@@ -307,17 +305,109 @@ color: rgb(255, 255, 255);</string>
      </item>
     </layout>
    </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>528</y>
+      <width>445</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>16777215</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(58, 58, 58);
+font: 57 10pt &quot;Montserrat Medium&quot;;</string>
+    </property>
+    <property name="text">
+     <string>You don't have account?</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonLogin_2">
+    <property name="geometry">
+     <rect>
+      <x>504</x>
+      <y>564</y>
+      <width>400</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>400</width>
+      <height>40</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Montserrat Medium</family>
+      <pointsize>12</pointsize>
+      <weight>7</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 57 12pt &quot;Montserrat Medium&quot;;
+background-color: rgb(23, 189, 192);
+color: rgb(255, 255, 255);
+</string>
+    </property>
+    <property name="text">
+     <string>Create one</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>516</y>
+      <width>325</width>
+      <height>1</height>
+     </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>350</width>
+      <height>1</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(229, 229, 229);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
    <zorder>label_2</zorder>
    <zorder>label</zorder>
    <zorder>verticalLayoutWidget</zorder>
    <zorder>verticalLayoutWidget_2</zorder>
+   <zorder>label_7</zorder>
+   <zorder>pushButtonLogin_2</zorder>
+   <zorder>verticalLayoutWidget_3</zorder>
+   <zorder>label_6</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1388</width>
+     <width>951</width>
      <height>26</height>
     </rect>
    </property>
