--- a/USER_INTERFACE/DEFAULT/MainWindowProduct.ui
+++ b/USER_INTERFACE/DEFAULT/MainWindowProduct.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindowVendor</class>
- <widget class="QMainWindow" name="MainWindowVendor">
+ <class>MainWindowProduct</class>
+ <widget class="QMainWindow" name="MainWindowProduct">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -20,7 +20,7 @@
    <enum>Qt::NoFocus</enum>
   </property>
   <property name="windowTitle">
-   <string>Vendor</string>
+   <string>Product</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -63,6 +63,43 @@ background-color: rgb(255, 255, 255);</string>
       <number>7</number>
      </property>
      <item>
+      <widget class="QPushButton" name="pushButtonProduct">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>60</height>
+        </size>
+       </property>
+       <property name="toolTipDuration">
+        <number>-1</number>
+       </property>
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">font: 63 12pt &quot;Montserrat SemiBold&quot;;
+color: rgb(14, 23, 67);
+background-color: rgb(242, 248, 255)</string>
+       </property>
+       <property name="text">
+        <string>  Product</string>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>../../RESOURCE/ICON/album.png</normaloff>../../RESOURCE/ICON/album.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="pushButtonAdmin">
        <property name="maximumSize">
         <size>
@@ -90,7 +127,7 @@ color: rgb(155, 159, 162);</string>
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>../RESOURCE/ICON/adm2.png</normaloff>../RESOURCE/ICON/adm2.png</iconset>
+         <normaloff>../../RESOURCE/ICON/adm2.png</normaloff>../../RESOURCE/ICON/adm2.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -119,15 +156,16 @@ color: rgb(155, 159, 162);</string>
        </property>
        <property name="styleSheet">
         <string notr="true">font: 63 12pt &quot;Montserrat SemiBold&quot;;
-color: rgb(14, 23, 67);
-background-color: rgb(242, 248, 255)</string>
+background-color: rgb(255, 255, 255);
+border: 1px solid #9b9fa2;
+color: rgb(155, 159, 162);</string>
        </property>
        <property name="text">
         <string>  Vendor</string>
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>../RESOURCE/ICON/vendor2.png</normaloff>../RESOURCE/ICON/vendor2.png</iconset>
+         <normaloff>../../RESOURCE/ICON/vendor1.png</normaloff>../../RESOURCE/ICON/vendor1.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -168,7 +206,7 @@ color: rgb(155, 159, 162);</string>
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>../RESOURCE/ICON/import.png</normaloff>../RESOURCE/ICON/import.png</iconset>
+         <normaloff>../../RESOURCE/ICON/import.png</normaloff>../../RESOURCE/ICON/import.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -209,7 +247,7 @@ color: rgb(155, 159, 162);</string>
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>../RESOURCE/ICON/doc.png</normaloff>../RESOURCE/ICON/doc.png</iconset>
+         <normaloff>../../RESOURCE/ICON/doc.png</normaloff>../../RESOURCE/ICON/doc.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -250,7 +288,7 @@ color: rgb(155, 159, 162);</string>
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>../RESOURCE/ICON/export.png</normaloff>../RESOURCE/ICON/export.png</iconset>
+         <normaloff>../../RESOURCE/ICON/export.png</normaloff>../../RESOURCE/ICON/export.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -291,7 +329,7 @@ color: rgb(155, 159, 162);</string>
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>../RESOURCE/ICON/doc.png</normaloff>../RESOURCE/ICON/doc.png</iconset>
+         <normaloff>../../RESOURCE/ICON/doc.png</normaloff>../../RESOURCE/ICON/doc.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -332,7 +370,7 @@ color: rgb(155, 159, 162);</string>
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>../RESOURCE/ICON/inventory.png</normaloff>../RESOURCE/ICON/inventory.png</iconset>
+         <normaloff>../../RESOURCE/ICON/inventory.png</normaloff>../../RESOURCE/ICON/inventory.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -373,7 +411,7 @@ color: rgb(155, 159, 162);</string>
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>../RESOURCE/ICON/statis.png</normaloff>../RESOURCE/ICON/statis.png</iconset>
+         <normaloff>../../RESOURCE/ICON/statis.png</normaloff>../../RESOURCE/ICON/statis.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -458,7 +496,7 @@ QPushButton:focus {
         </property>
         <property name="icon">
          <iconset>
-          <normaloff>../RESOURCE/ICON/new.png</normaloff>../RESOURCE/ICON/new.png</iconset>
+          <normaloff>../../RESOURCE/ICON/new.png</normaloff>../../RESOURCE/ICON/new.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -507,7 +545,7 @@ QPushButton:focus {
         </property>
         <property name="icon">
          <iconset>
-          <normaloff>../RESOURCE/ICON/edit.png</normaloff>../RESOURCE/ICON/edit.png</iconset>
+          <normaloff>../../RESOURCE/ICON/edit.png</normaloff>../../RESOURCE/ICON/edit.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -556,7 +594,7 @@ QPushButton:focus {
         </property>
         <property name="icon">
          <iconset>
-          <normaloff>../RESOURCE/ICON/delete.png</normaloff>../RESOURCE/ICON/delete.png</iconset>
+          <normaloff>../../RESOURCE/ICON/delete.png</normaloff>../../RESOURCE/ICON/delete.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -626,7 +664,7 @@ QPushButton:focus {
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>../RESOURCE/ICON/exc.png</normaloff>../RESOURCE/ICON/exc.png</iconset>
+       <normaloff>../../RESOURCE/ICON/exc.png</normaloff>../../RESOURCE/ICON/exc.png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -642,7 +680,7 @@ QPushButton:focus {
       <x>0</x>
       <y>-12</y>
       <width>1393</width>
-      <height>841</height>
+      <height>817</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -735,7 +773,7 @@ QPushButton:focus {
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>../RESOURCE/ICON/search.png</normaloff>../RESOURCE/ICON/search.png</iconset>
+       <normaloff>../../RESOURCE/ICON/search.png</normaloff>../../RESOURCE/ICON/search.png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -775,12 +813,27 @@ padding: 10px;</string>
      </item>
      <item>
       <property name="text">
-       <string>Vendor ID</string>
+       <string>ID</string>
       </property>
      </item>
      <item>
       <property name="text">
-       <string>Name </string>
+       <string>Title</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Artist</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Year</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Category</string>
       </property>
      </item>
     </widget>
@@ -806,27 +859,37 @@ font: 57 10pt &quot;Montserrat Medium&quot;;</string>
     </property>
     <column>
      <property name="text">
-      <string>Vendor ID</string>
+      <string>ID</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>Name</string>
+      <string>Title</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>Address</string>
+      <string>Artist</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>Phone</string>
+      <string>Year</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>Email</string>
+      <string>Category</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Price</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Stock</string>
      </property>
     </column>
    </widget>
@@ -908,7 +971,7 @@ QPushButton:focus {
     </property>
     <property name="icon">
      <iconset>
-      <normaloff>../RESOURCE/ICON/turnoff.png</normaloff>../RESOURCE/ICON/turnoff.png</iconset>
+      <normaloff>../../RESOURCE/ICON/turnoff.png</normaloff>../../RESOURCE/ICON/turnoff.png</iconset>
     </property>
     <property name="iconSize">
      <size>
