--- a/USER_INTERFACE/Export/MainWindowExport.ui
+++ b/USER_INTERFACE/Export/MainWindowExport.ui
@@ -833,13 +833,19 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QWidget" name="formLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>891</x>
+      <x>903</x>
       <y>48</y>
-      <width>457</width>
+      <width>445</width>
       <height>85</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
+     <property name="horizontalSpacing">
+      <number>16</number>
+     </property>
+     <property name="verticalSpacing">
+      <number>9</number>
+     </property>
      <item row="1" column="0">
       <widget class="QLabel" name="label_7">
        <property name="styleSheet">
